--- a/html/04_forms.html
+++ b/html/04_forms.html
@@ -14,7 +14,7 @@
         </label>
         <label for="password">
             password:
-            <input type="password" name="password">
+            <input placeholder="Enter your password" type="password" name="password">
         </label> 
         <button type="submit">Register</button>
     </form>
@@ -23,7 +23,7 @@
         <form>
             <label for="email">
                 email:
-                <input type="email" name=""email>
+                <input placeholder="Enter your email" type="email" name=""email>
             </label>
             <button type="submit">Submit</button>
         </form>
