--- a/html/04_forms.html
+++ b/html/04_forms.html
@@ -23,7 +23,7 @@
         <form>
             <label for="email">
                 email:
-                <input placeholder="Enter your email" type="email" name=""email>
+                <input placeholder="Enter your email" type="email" name="email">
             </label>
             <button type="submit">Submit</button>
         </form>
